# ExamTrainer

./: README.md  check_routes.py  create_admin.py  manage.py  pyproject.toml  run.py
app/: __init__.py  data.py  extensions.py  forms.py  models.py  routes.py
app/auth/: routes.py
app/templates/: add_question.html  add_task.html  admin_users.html  algorithms_questions.html  base.html  demo_result.html  demo_start.html  demo_take.html  exam_questions.html  index.html  informatics_questions.html  list_questions.html  login.html  profile.html  questions.html  register.html  tasks.html  users.html
migrations/versions/: 1ac341436b79_add_question_and_answer_models.py  21b1545339cf_add_oauth_provider_and_oauth_id_to_user.py  338be004c0e5_add_is_admin_and_task_table.py  a6225925bea8_fix_models_remove_duplicate_user.py
